--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -533,7 +533,7 @@ color: #000;
 }
 
 section.main-section.project_insight p{
-  color: #fff;
+  color: #000;
 }
 section.usp_section{
 min-height: auto;
