--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -252,6 +252,14 @@ text-align: left;
   .min-height{
     min-height: 600px;
   }
+  .projects-insights-details  .home-tabs-content h2, .projects-insights-details .home-tabs-content h1{
+    font-size: 30px;
+    line-height: 30px;
+}
+.project-details .projects-insights-details h3 {
+  font-size: 28px;
+  line-height: 30px;
+}
 .main-section h2 {
     font-family: proxima-bold;
     font-size: 40px;
@@ -2337,6 +2345,17 @@ a.navbar-brand{
 }
 .row.custom-image-row-text p, .our_values_image_custom p{
   text-align: left !important;
+}
+.footer-main .footer-colum p span {
+  font-weight: normal;
+  font-family: 'proxima-regular' !important;
+}
+li.footer-colum ul li {
+  font-family: 'proxima-regular';
+  font-weight: normal;
+}
+.footer-colum h3 span {
+  font-family: 'proxima-bold' !important;
 }
 
 @media screen and (min-width: 786px) and (max-width: 1400px) {
